# learn-langchain

./: .gitignore  00_langchain_simple_app.ipynb  01_langchain_semantic_search.ipynb  02_langchain_structured_output.ipynb  03_tool_calling_extraction_chain.ipynb  04_langchain_chatbot.ipynb  pyproject.toml
