[project]
name = "dev-wth-llm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "jupyter>=1.1.1",
    "langchain[anthropic]>=0.3.26",
    "langchain-core>=0.3.68",
    "langsmith>=0.4.5",
    "notebook>=7.4.4",
    "openai>=1.95.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "langchain-openai>=0.3.28",
    "langchain-community>=0.3.27",
    "pypdf>=5.8.0",
    "langchain-chroma>=0.2.5",
]
